@@ -35,6 +35,8 @@ Legend:
   The subtitles' timings were not correctly respected after switching from an
   animated subtitles track to a non-animated subtitles track.
 ! Ticket #1782, Correctly empty the "Recent" jump list when erasing the history
+  and ensure that no item is added to Windows recent documents menu or to the
+  "Recent" jump list when the history is disabled
 ! Ticket #2537, #2554, Fix "Attempted an unsupported operation" error in the
   Save dialogs on Vista and newer systems
 ! Ticket #2572, FLAC Source: Fix playback for some files
